# Airport_parking_toolkit

./: README.md  load_parquet_to_db.py  pyproject.toml
airport_parking_toolkit/: __init__.py  alter.sql  cli_tool.py  etl.py  parking_events.sql  queries.sql  schema.sql  spark_jobs.py
airport_parking_toolkit/advanced_sql/: advanced_features.sql
data/: parking_events.csv  parking_zones.csv  vehicles.csv
output_parquet/: parking_events.parquet  parking_zones.parquet  vehicles.parquet
tests/: conftest.py  test_cli.py
